--- a/charityapp_ang/src/app/charity-action-aplication-list/charity-action-aplication-list.component.html
+++ b/charityapp_ang/src/app/charity-action-aplication-list/charity-action-aplication-list.component.html
@@ -1,52 +1,51 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light static-top mb-5 shadow">
         <div class="container">
-          <a class="navbar-brand" href="#">
-            <img src="https://i.ibb.co/dkGDRcN/charity-modern-logo.jpg" alt="charity-modern-logo" border="0"height="36" />
-            Charity organisation
-        </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" href="#">
+                <img src="https://i.ibb.co/dkGDRcN/charity-modern-logo.jpg" alt="charity-modern-logo" border="0" height="36" /> Charity organisation
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
-                <a class="nav-link"onclick="return back()" ></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" routerLink="/user" routerLinkActive="active" ariaCurrentWhenActive="page">User</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" routerLink="/charityAction" routerLinkActive="active" ariaCurrentWhenActive="page">Open charity actions</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link"(click)="logout()" routerLinkActive="active" ariaCurrentWhenActive="page">Logout</a>
-              </li>
-            </ul>
-          </div>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" onclick="return back()"></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" routerLink="/user" routerLinkActive="active" ariaCurrentWhenActive="page">User</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" routerLink="/charityAction" routerLinkActive="active" ariaCurrentWhenActive="page">Open charity actions</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" (click)="logout()" routerLinkActive="active" ariaCurrentWhenActive="page">Logout</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </nav>
+    </nav>
     <!-- Page Content -->
     <div class="container" id="main-container">
         <div class="row">
-          <div *ngFor= "let chAction of charityAplications" class="col-md-6 col-xl-3 p-1">
-            <div class="card m-b-30">
-              <div class="card-body row" style="margin-left: 5px">
-                <div class="col card-title align-self-center mb-0">
-                  <h5 style="text-align: center">{{chAction?.aplicationStatus}}</h5>
+            <div *ngFor="let chAction of charityAplications" class="col-md-6 col-xl-3 p-1">
+                <div class="card m-b-30">
+                    <div class="card-body row" style="margin-left: 5px">
+                        <div class="col card-title align-self-center mb-0">
+                            <h5 style="text-align: center">{{chAction?.aplicationStatus}}</h5>
+                        </div>
+                    </div>
+                    <ul class="list-group list-group-flush" style="margin-left: 5px">
+                        <li class="list-group-item"><i class="fa fa-battery-full float-right"></i>Action: {{chAction?.charityAction?.name}}</li>
+                        <li class="list-group-item"><i class="fa fa-calendar float-right"></i>Reason: {{chAction?.reason}}</li>
+                    </ul>
+                    <div class="card-body">
+                        <div class="float-right btn-group btn-group-sm">
+                            <!-- <a (click)="show(chAction.name)" class="btn btn-primary tooltips"  data-placement="top" data-original-title="Show">Show </a> -->
+                        </div>
+                    </div>
                 </div>
-              </div>
-              <ul class="list-group list-group-flush" style="margin-left: 5px">
-                <li class="list-group-item"><i class="fa fa-battery-full float-right"></i>Action: {{chAction?.charityAction?.name}}</li>
-                <li class="list-group-item"><i class="fa fa-calendar float-right"></i>Reason: {{chAction?.reason}}</li>
-              </ul>
-              <div class="card-body">
-                <div class="float-right btn-group btn-group-sm">
-                  <!-- <a (click)="show(chAction.name)" class="btn btn-primary tooltips"  data-placement="top" data-original-title="Show">Show </a> -->
-              </div>
             </div>
-          </div>
         </div>
-        </div>
-      </div>
+    </div>
 </body>
