--- a/charityapp_ang/src/app/charity-action/charity-action-applay.component.html
+++ b/charityapp_ang/src/app/charity-action/charity-action-applay.component.html
@@ -1,31 +1,30 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light static-top mb-5 shadow">
         <div class="container">
-          <a class="navbar-brand" href="#">
-            <img src="https://i.ibb.co/dkGDRcN/charity-modern-logo.jpg" alt="charity-modern-logo" border="0"height="36" />
-            Charity organisation
-        </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" href="#">
+                <img src="https://i.ibb.co/dkGDRcN/charity-modern-logo.jpg" alt="charity-modern-logo" border="0" height="36" /> Charity organisation
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
-                <a class="nav-link"onclick="return back()" ></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" routerLink="/user" routerLinkActive="active" ariaCurrentWhenActive="page">User</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" routerLink="/charityAction" routerLinkActive="active" ariaCurrentWhenActive="page">Open charity actions</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link"(click)="logout()" routerLinkActive="active" ariaCurrentWhenActive="page">Logout</a>
-              </li>
-            </ul>
-          </div>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" onclick="return back()"></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" routerLink="/user" routerLinkActive="active" ariaCurrentWhenActive="page">User</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" routerLink="/charityAction" routerLinkActive="active" ariaCurrentWhenActive="page">Open charity actions</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" (click)="logout()" routerLinkActive="active" ariaCurrentWhenActive="page">Logout</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </nav>
+    </nav>
     <header>
         <h1>Application to {{name}}</h1>
     </header>
@@ -35,13 +34,12 @@
                 <label>Reason:</label>
                 <input ngModel name="charityActionName" class="cdk-visually-hidden">
                 <div>
-                  <textarea ngModel name="reason" rows = "5" cols="60" type = "text">
+                    <textarea ngModel name="reason" rows="5" cols="60" type="text">
                   
                   </textarea>
                 </div>
-                <button [disabled]="applayForm.form.invalid" class="register_button"  type="submit">Applay</button>
+                <button [disabled]="applayForm.form.invalid" class="register_button" type="submit">Applay</button>
             </div>
         </form>
     </main>
 </body>
-
