--- a/charityapp_ang/src/app/login/login.component.html
+++ b/charityapp_ang/src/app/login/login.component.html
@@ -1,32 +1,31 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light static-top mb-5 shadow">
         <div class="container">
-          <a class="navbar-brand" href="#">
-            <img src="https://i.ibb.co/dkGDRcN/charity-modern-logo.jpg" alt="charity-modern-logo" border="0"height="36" />
-            Charity organisation
-        </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" href="#">
+                <img src="https://i.ibb.co/dkGDRcN/charity-modern-logo.jpg" alt="charity-modern-logo" border="0" height="36" /> Charity organisation
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
-                <a class="nav-link"onclick="return back()" ></a>
-              </li>
-            </ul>
-          </div>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" onclick="return back()"></a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </nav>
+    </nav>
     <header>
         <h1>Good to see you again</h1>
     </header>
     <main>
-        <form (submit)="login()"  class="form_class" name="login_form">
+        <form (submit)="login()" class="form_class" name="login_form">
             <div class="form_div">
                 <label>Login:</label>
-                <input class="field_class" for="username" [(ngModel)]="credentials.login" type="text" placeholder="login" name = "username" autofocus>
+                <input class="field_class" for="username" [(ngModel)]="credentials.login" type="text" placeholder="login" name="username" autofocus>
                 <label>Password:</label>
-                <input class="field_class" for="password" [(ngModel)]="credentials.password" type="password" placeholder="password" name = "password">
+                <input class="field_class" for="password" [(ngModel)]="credentials.password" type="password" placeholder="password" name="password">
                 <button class="submit_class" type="submit">Login</button>
             </div>
             <div class="info_div">
