--- a/charityapp_ang/src/app/register/register.component.html
+++ b/charityapp_ang/src/app/register/register.component.html
@@ -1,22 +1,21 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light static-top mb-5 shadow">
         <div class="container">
-          <a class="navbar-brand" href="#">
-            <img src="https://i.ibb.co/dkGDRcN/charity-modern-logo.jpg" alt="charity-modern-logo" border="0"height="36" />
-            Charity organisation
-        </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" href="#">
+                <img src="https://i.ibb.co/dkGDRcN/charity-modern-logo.jpg" alt="charity-modern-logo" border="0" height="36" /> Charity organisation
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
-                <a class="nav-link" onclick="return back()" ></a>
-              </li>
-            </ul>
-          </div>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" onclick="return back()"></a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </nav>
+    </nav>
     <header>
         <h1>Registration</h1>
     </header>
@@ -24,7 +23,7 @@
         <form #registerForm="ngForm" (ngSubmit)="onRegisterUser(registerForm)" class="form_class">
             <div class="form_div">
                 <label>First name:</label>
-                <input class="field_class" ngModel name="firstName"type="text" placeholder="first name" autofocus>
+                <input class="field_class" ngModel name="firstName" type="text" placeholder="first name" autofocus>
                 <label>Last name:</label>
                 <input class="field_class" ngModel name="lastName" type="text" placeholder="last name" autofocus>
                 <label>Login:</label>
@@ -37,18 +36,15 @@
                 <input class="field_class" ngModel name="email" type="text" placeholder="email">
 
                 <label id="example-radio-group-label">Pick your role</label>
-                <mat-radio-group
-                  aria-labelledby="example-radio-group-label"
-                  class="example-radio-group"
-                  ngModel name="role">
+                <mat-radio-group aria-labelledby="example-radio-group-label" class="example-radio-group" ngModel name="role">
 
-                  <mat-radio-button class="example-radio-button" value=Donor >Donor</mat-radio-button>
-                  <mat-radio-button class="example-radio-button" value=Benefactor >Benefactor</mat-radio-button>
+                    <mat-radio-button class="example-radio-button" value=Donor>Donor</mat-radio-button>
+                    <mat-radio-button class="example-radio-button" value=Benefactor>Benefactor</mat-radio-button>
 
 
                 </mat-radio-group>
 
-                <button [disabled]="registerForm.form.invalid" class="register_button"  type="submit">Register</button>
+                <button [disabled]="registerForm.form.invalid" class="register_button" type="submit">Register</button>
             </div>
             <div class="info_div">
                 <p>If you already have an account login <a class="nav-link" routerLink="/login" routerLinkActive="active" ariaCurrentWhenActive="page">here</a></p>
@@ -56,4 +52,3 @@
         </form>
     </main>
 </body>
-
