--- a/charityapp_ang/src/app/user/user.component.html
+++ b/charityapp_ang/src/app/user/user.component.html
@@ -1,46 +1,45 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light static-top mb-5 shadow">
         <div class="container">
-          <a class="navbar-brand" href="#">
-            <img src="https://i.ibb.co/dkGDRcN/charity-modern-logo.jpg" alt="charity-modern-logo" border="0"height="36" />
-            Charity organisation
-        </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" href="#">
+                <img src="https://i.ibb.co/dkGDRcN/charity-modern-logo.jpg" alt="charity-modern-logo" border="0" height="36" /> Charity organisation
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
-                <a class="nav-link"onclick="return back()" ></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" routerLink="/charityAction" routerLinkActive="active" ariaCurrentWhenActive="page">Open charity actions</a>
-              </li>
-              <div *ngIf="userIsBenefactor()">
-                <li class="nav-item">
-                  <a class="nav-link"routerLink="/charityActionAplicationList" routerLinkActive="active" ariaCurrentWhenActive="page">Charity actions aplications</a>
-                </li>
-              </div>
-              <li class="nav-item">
-                <a class="nav-link"(click)="logout()" routerLinkActive="active" ariaCurrentWhenActive="page">Logout</a>
-              </li>
-            </ul>
-          </div>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" onclick="return back()"></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" routerLink="/charityAction" routerLinkActive="active" ariaCurrentWhenActive="page">Open charity actions</a>
+                    </li>
+                    <div *ngIf="userIsBenefactor()">
+                        <li class="nav-item">
+                            <a class="nav-link" routerLink="/charityActionAplicationList" routerLinkActive="active" ariaCurrentWhenActive="page">Charity actions aplications</a>
+                        </li>
+                    </div>
+                    <li class="nav-item">
+                        <a class="nav-link" (click)="logout()" routerLinkActive="active" ariaCurrentWhenActive="page">Logout</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </nav>
+    </nav>
     <header>
         <h1>Welcome {{user?.login}}</h1>
     </header>
     <!-- Page Content -->
-  <div class="container">
-    <div class="card border-0 shadow my-5">
-      <div class="card-body p-5">
-        <p class="lead">User name : {{user?.firstName}} {{user?.lastName}}</p>
-        <p class="lead">User login : {{user?.login}}</p>
-        <p class="lead">User email : {{user?.email}}</p>
-        <p class="lead">User role : {{user?.role}}</p>
-        <p></p>
-      </div>
+    <div class="container">
+        <div class="card border-0 shadow my-5">
+            <div class="card-body p-5">
+                <p class="lead">User name : {{user?.firstName}} {{user?.lastName}}</p>
+                <p class="lead">User login : {{user?.login}}</p>
+                <p class="lead">User email : {{user?.email}}</p>
+                <p class="lead">User role : {{user?.role}}</p>
+                <p></p>
+            </div>
+        </div>
     </div>
-  </div>
 </body>
