Handling application with no reason

--- a/charityapp_ang/src/app/charity-action/charity-action-details.component.html
+++ b/charityapp_ang/src/app/charity-action/charity-action-details.component.html
@@ -1,4 +1,9 @@
 <!-- Navigation -->
+<html lang="pl-PL">
+
+<head>
+    <meta charset="UTF-8">
+</head>
 <nav class="navbar navbar-expand-lg navbar-light bg-light static-top mb-5 shadow">
     <div class="container">
         <a class="navbar-brand" href="#">
