--- a/charityapp_ang/src/app/charity-action/charity-action-support.component.html
+++ b/charityapp_ang/src/app/charity-action/charity-action-support.component.html
@@ -23,6 +23,26 @@
         <div class="card-body p-5">
             <h1 class="fw-light">Welcome</h1>
             <p class="lead">Support {{name}}</p>
+
+            <main>
+                <form #donationForm="ngForm" (ngSubmit)="onDonation(donationForm)" class="form_class">
+                    <div class="form_div">
+                        <label>Amount:</label>
+                        <input type="number" ngModel name="amount" class="form-control" id="amount" placeholder="amount" required>
+                        <input ngModel name="charityActionName" class="cdk-visually-hidden">
+                        <div>
+                            <mat-radio-group aria-labelledby="example-radio-group-label" class="example-radio-group" ngModel name="anonymous">
+                                <mat-radio-button class="example-radio-button" value=false>Public</mat-radio-button>
+                                <mat-radio-button class="example-radio-button" value=true>Anonymous</mat-radio-button>
+                            </mat-radio-group>
+                            <div *ngIf="err">
+                                <p style="color:red">*You need to amount reason</p>
+                            </div>
+                        </div>
+                        <button class="btn btn-primary tooltips" type="submit">Donate</button>
+                    </div>
+                </form>
+            </main>
         </div>
     </div>
 </div>
