Displaying application status for user

--- a/charityapp_ang/src/app/charity-action-aplication-list/charity-action-aplication-list.component.html
+++ b/charityapp_ang/src/app/charity-action-aplication-list/charity-action-aplication-list.component.html
@@ -32,12 +32,12 @@
                 <div class="card m-b-30">
                     <div class="card-body row" style="margin-left: 5px">
                         <div class="col card-title align-self-center mb-0">
-                            <h5 style="text-align: center">{{chAction?.aplicationStatus}}</h5>
+                            <h5 style="text-align: center">{{chAction?.status}}</h5>
                         </div>
                     </div>
                     <ul class="list-group list-group-flush" style="margin-left: 5px">
-                        <li class="list-group-item"><i class="fa fa-battery-full float-right"></i>Action: {{chAction?.charityAction?.name}}</li>
-                        <li class="list-group-item"><i class="fa fa-calendar float-right"></i>Reason: {{chAction?.reason}}</li>
+                        <li class="list-group-item"><i class="fa float-right"></i>Action: {{chAction?.charityAction?.name}}</li>
+                        <li class="list-group-item"><i class="fa float-right"></i>Reason: {{chAction?.reason}}</li>
                     </ul>
                     <div class="card-body">
                         <div class="float-right btn-group btn-group-sm">
