Improving the look of charity actions tiles (they are even and the description is cut short if it is too long) Correction of typos

--- a/charityapp_ang/src/app/charity-action/charity-action-applay.component.html
+++ b/charityapp_ang/src/app/charity-action/charity-action-applay.component.html
@@ -35,13 +35,13 @@
                 <input ngModel name="charityActionName" class="cdk-visually-hidden">
                 <div>
                     <textarea ngModel name="reason" rows="5" cols="60" type="text">
-                  
+
                   </textarea>
                     <div *ngIf="err">
                         <p style="color:red">*You need to provide reason</p>
                     </div>
                 </div>
-                <button [disabled]="applayForm.form.invalid" class="register_button" type="submit">Applay</button>
+                <button [disabled]="applayForm.form.invalid" class="register_button" type="submit">Apply</button>
             </div>
         </form>
     </main>
