--- a/charityapp_ang/src/app/charity-action/charity-action-details.component.html
+++ b/charityapp_ang/src/app/charity-action/charity-action-details.component.html
@@ -39,7 +39,7 @@
             <div *ngIf="isUserBenefactor()">
                 <div *ngIf="status;else other_content">
                     <div class="float-right btn-group btn-group-sm">
-                        <a (click)="routeA()" class="btn btn-primary tooltips" data-placement="top" data-original-title="Show">Applay </a>
+                        <a (click)="routeA()" class="btn btn-primary tooltips" data-placement="top" data-original-title="Show">Apply </a>
                     </div>
                 </div>
                 <ng-template #other_content>
