Sample pages to rate donors and verify benefactors

--- a/charityapp_ang/src/app/charity-action/charity-action.component.html
+++ b/charityapp_ang/src/app/charity-action/charity-action.component.html
@@ -51,7 +51,7 @@
                     </div>
                 </div>
                 <ul class="list-group list-group-flush" style="margin-left: 5px">
-                    <li class="list-group-item"><i class="fa fa-battery-full float-right"></i>Goal: {{chAction?.goal}}</li>
+                    <li class="list-group-item"><i class="fa fa-usd float-right"></i>Goal: {{chAction?.goal}}</li>
                     <li class="list-group-item"><i class="fa fa-calendar float-right"></i>Ends on: {{chAction?.endDate}}</li>
                 </ul>
                 <!--        przyciski-->
