--- a/charityapp_ang/src/app/user/user.component.html
+++ b/charityapp_ang/src/app/user/user.component.html
@@ -17,9 +17,19 @@
                     </li>
                     <div *ngIf="userIsBenefactor()">
                         <li class="nav-item">
-                            <a class="nav-link" routerLink="/charityActionAplicationList" routerLinkActive="active" ariaCurrentWhenActive="page">Charity actions aplications</a>
+                            <a class="nav-link" routerLink="/charityActionAplicationList" routerLinkActive="active" ariaCurrentWhenActive="page">Charity actions applications</a>
                         </li>
                     </div>
+                  <div *ngIf="userIsWorker()">
+                    <li class="nav-item">
+                      <a class="nav-link" routerLink="/benefactorsApplications" routerLinkActive="active" ariaCurrentWhenActive="page">Verify benefactors</a>
+                    </li>
+                  </div>
+                  <div *ngIf="userIsWorker()">
+                    <li class="nav-item">
+                      <a class="nav-link" routerLink="/rateDonorsList" routerLinkActive="active" ariaCurrentWhenActive="page">Rate donors</a>
+                    </li>
+                  </div>
                     <li class="nav-item">
                         <a class="nav-link" (click)="logout()" routerLinkActive="active" ariaCurrentWhenActive="page">Logout</a>
                     </li>
