--- a/charityapp_ang/src/app/benefactors-applications/benefactors-applications.component.html
+++ b/charityapp_ang/src/app/benefactors-applications/benefactors-applications.component.html
@@ -1,30 +1,46 @@
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light static-top mb-5 shadow">
-  <div class="container">
-    <a class="navbar-brand" href="#">
-      <img src="https://i.ibb.co/dkGDRcN/charity-modern-logo.jpg" alt="charity-modern-logo" border="0" height="36" /> Charity organisation
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light static-top mb-5 shadow">
+        <div class="container">
+            <a class="navbar-brand" href="#">
+                <img src="https://i.ibb.co/dkGDRcN/charity-modern-logo.jpg" alt="charity-modern-logo" border="0" height="36" /> Charity organisation
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarResponsive">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item">
-          <a class="nav-link" onclick="return back()"></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/user" routerLinkActive="active" ariaCurrentWhenActive="page">User</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/charityAction" routerLinkActive="active" ariaCurrentWhenActive="page">Open charity actions</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" (click)="logout()" routerLinkActive="active" ariaCurrentWhenActive="page">Logout</a>
-        </li>
-      </ul>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" onclick="return back()"></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" routerLink="/user" routerLinkActive="active" ariaCurrentWhenActive="page">User</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" routerLink="/charityAction" routerLinkActive="active" ariaCurrentWhenActive="page">Open charity actions</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" (click)="logout()" routerLinkActive="active" ariaCurrentWhenActive="page">Logout</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!-- Page Content -->
+    <div class="container">
+        <div class="card border-0 shadow my-5">
+            <div class="card-body p-5">
+                <p class="fw-light">User : {{userLogin}}</p>
+                <p></p>
+                <p>Reason</p>
+                <p>{{benefApplication?.reason}} </p>
+                <div style="height: 200px"></div>
+            </div>
+        </div>
+        <div>
+            <button class="button" data-dismiss="modal" (click)="akcept()">Akcept></button>
+            <button class="button" data-dismiss="modal" (click)="decline()">Decline</button>
+        </div>
     </div>
-  </div>
-</nav>
-<!-- Page Content -->
+
 
 </body>
